# intro-to-backtesting

./: .gitignore  404.html  BOOK_COMPLETION_SUMMARY.md  CHAPTERS_10-18_SUMMARY.md  CLAUDE.md  EXECUTION_RESULTS.txt  PART1_ENHANCEMENT_SUMMARY.md  README.md  TABLE_OF_CONTENTS.md  en.search-data.min.2505a5447ec45dd16ec0703843186d098a29c8a6fb53e5dc73a7a067116ff090.json  en.search-data.min.3f323993fc6968752223e0c4d49aa1419e33a7b9e98e301185547593bded4950.json  en.search-data.min.c44788b6cdfb903e7995debfaf070a2c1b42cf0d5171abfffc8183c49a97e811.json  en.search-data.min.ceebae30d5be71fab0ebbd66be1e982aec3df884209f8a9932a3bf3e797478f1.json  en.search-data.min.f560b1f9650c437e8c304f3fe747847c2f16573494cbdf47ebe643ee98936d0b.json  en.search.min.045ca227d4176807ad581a410adc82f05790d9bf1e41b6de6824aa408874b1e4.js  en.search.min.05baa5436ceb0d25fdc88cb36120167f2dcace5f2606a6e63ae01a885e2bbf68.js  en.search.min.33e45e16663af737c61320d3bc3615c83d0ec3f6021a7683da2de0173401e157.js  en.search.min.576a6caebf7a62e26eb4effef6d66e10e278bbc2fe086fad5ba23160d9176866.js  en.search.min.ef02b99ce746fbf98a874e87fb81648e571c79f9d79c52735100a0251d5ff1ba.js  hugo.toml  index.html  index.xml  manifest.json  sitemap.xml
codes/: README.md  pyproject.toml
codes/chapter01/: 01_basic_data_download.py  01_hello_trading.py  02_matplotlib_basics.py  03_first_backtest.py  basic_plotting.py  download_data.py  first_backtest.py
codes/chapter02/: 01_data_download_multiple_timeframes.py  01_download_and_explore.py  02_data_preprocessing.py  03_data_quality_validation.py  chapter02_outputs.md
content/: _index.md
(+75 files in other folders)
